k8s/uat/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: uat
  name: lz-spring-application
  annotations:
    kubernetes.io/ingress.class: nginx
#    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
spec:
  rules:
    - host: application.bank.xyz
      http:
        paths:
          - path: /
            backend:
              serviceName: lz-spring-application
              servicePort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: uat
  name: pma
  annotations:
    kubernetes.io/ingress.class: nginx
#    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
spec:
  rules:
    - host: pma.bank.xyz
      http:
        paths:
          - path: /
            backend:
              serviceName: pma
              servicePort: 80
